phpMyFAQ 2.7.1
Codename "Prospero"

CHANGELOG

This is a log of major user-visible changes in each phpMyFAQ release.

Version 2.7.1 - 2011-10-
- added missing translations (Thorsten)
- added configurable encryption type for passwords (Thorsten)
- 

Version 2.7.0 - 2011-09-30
- changed PHP requirement to PHP 5.2.3 (Thorsten)
- dropped support for MySQL 4.1 (Thorsten)
- dropped support for Internet Explorer 6 + 7 (Thorsten)
- dropped support for obsolete Microsummaries (Thorsten)
- added new HTML5/CSS3 powered layout and administration backend (Thorsten)
- added configurable search relevance functionality (Gustavo Solt)
- added automatic translations with Google Translate (Gustavo Solt)
- added Twitter support (Thorsten, Thomas Zeithaml)
- added Facebook Like Button support (Thorsten)
- added "Bookmark on Delicious" support (Thorsten)
- added attachment administration frontend (Anatoliy)
- added basic authentication support for LDAP groups (Thorsten)
- added basic support for HTML5 microdata (Thorsten)
- added functionality of the TinyMCE save button (Gustavo Solt)
- added basic reporting functionality (Gustavo Solt, Thorsten)
- added IPv6 support (David Soria Parra)
- added support for Single Sign On authentication (Thorsten)
- added support for complete secured FAQ installations (Thorsten)
- added user configurable date formatting (Thorsten)
- added possibility to delete user generated search terms (Thorsten)
- improved usability in frontend and administration backend (Thorsten)
- enabling Gzip compression by default (Thorsten, Lorenzo Milesi)
- updated bundled jQuery to version 1.6.2 (Thorsten)
- updated bundled Modernizr to version 2.0 (Thorsten)
- updated bundled TinyMCE to version 3.4.2 (Thorsten)
- updated bundled SyntaxHighlighter to version 3.0.83 (Thorsten)
- updated bundled TCPDF library to version 5.9.110 (Thorsten)
- updated Dutch translation (ronald AT proudsites DOT com)
- updated German translation (Thorsten)